--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <title>Apply JS example</title>
-  </head>
-  <body>
-    <button>Click me</button>
-  </body>
-</html>
+---
+title: "Welcome to my blog"
+---
+
+I'm glad you are here. I plan to talk about ...
