--- a/javascript.html
+++ b/javascript.html
@@ -4,3 +4,13 @@ layout: default
 
 <h1> JavaScript language path </h1>
 <p> Hello JS</p>
+
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="">{{post.title}}</a>
+      <p>{{post.meta}}</p>
+    </li>
+  {% endfor %}
+</ul>
