--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,7 @@ layout: default
 
 
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.categories.js %}
     <li>
       <a href="">{{post.title}}</a>
       <p>{{post.meta}}</p>
