--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<link href="/css/style.css" rel="stylesheet">
+<link href="/css/common.css" rel="stylesheet">
 
 <h1>Hello world</h1>
 <p>Test</p>
